Simplify use of oil
Changes:
- Remove the explict OIL statics in ResourceUtil and extract from AmountResoruce that are type OIL
- ResourceUtil get a getOilResources method
- Replace calls to Cookiong.getOilMenu with ResourceUtil.getOilResources
- resources.xml correctly classsifies all oil types
- Change Help generator for Resources to group by GoodType instead of phase

- Rename constant array of resource id in ResourceUtil and update all references
- Optimise AmountResourceGood class to utilise fixed constants via switch statements instead of if/else chains

Part of #1574